syntax = "proto3";

package auth;

option go_package = "github.com/ziliscite/micro-auth/pkg/protobuf";

service AuthService {
  // For gateway to consume
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

  // Method for token service to consume
  rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  User response = 1;
  string status = 2;
}

message Token {
  string token = 1;
  // Unix timestamp for expiration time
  int64 expiration = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  Token response = 1;
}

message ActivateUserRequest {
  int64 user_id = 1;
}

// Return to token service
message ActivateUserResponse {
  User response = 1;
  bool activated = 2;
}
