syntax = "proto3";

package activation;

option go_package = "github.com/ziliscite/micro-auth/pkg/protobuf";

service ActivationService {
  rpc ActivateUser(ActivateRequest) returns (ActivateResponse);
}

message ActivateRequest {
  string token_string = 1;
}

message ActivateResponse {
  bool activated = 1;
  string status = 2;
}
